--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura</title>
+    <title>Lista de Cursos de devops da Alura</title>
 </head>
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker: Criando containers sem dor de cabeça</li>
+        <li>Curso de Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua: Mais qualidade e menos risco no desenvolvimento</li>
         <li>Kubernets</li>
