--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais.</li>
         <li>Curso de Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible</li>
+        <li>Ansible: Infraestrutura</li>
         <li>Integração Contínua: Mais qualidade e menos risco no desenvolvimento</li>
         <li>Kubernets</li>
     </ul>
