--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Curso de Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible: Infraestrutura</li>
         <li>Integração Contínua: Mais qualidade e menos risco no desenvolvimento</li>
-        <li>Kubernets</li>
+        <li>Kubernets: Introdução a orquestração de containers</li>
     </ul>
 </body>
 </html>
